tests/baselines/reference/parser618973.errors.txt
==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser618973.ts (2 errors) ====
    export export class Foo {
           ~~~~~~
!!! error TS1030: 'export' modifier already seen.
                        ~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
      public Bar() {
      }
    }